--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@ As you enter through the door you a greated by an old man
 {
 	(live: 5s)[
     	(stop:)
-        [[Responed to the old man]]
+        [[Respond to the old man]] ]]
 	]
 }
 
 {
 	(live: 5s)[
     	(stop:)
-        [[Ingore and walk straight past him]]
+        [[Ignore and walk straight past him]]
 	]
 }
 
-</tw-passagedata><tw-passagedata pid="2" name="Responed to the old man" tags="" position="1225,500" size="100,100">&quot;Hello Sir and how are you?&quot;
+</tw-passagedata><tw-passagedata pid="2" name="Respond to the old man" tags="" position="1500,400" size="100,100">&quot;Hello Sir and how are you?&quot;
 
 {
 	(live: 3s)[
@@ -55,10 +55,12 @@ As you enter through the door you a greated by an old man
 
 
 
-</tw-passagedata><tw-passagedata pid="3" name="Ingore and walk straight past him" tags="" position="1350,500" size="100,100">{
+</tw-passagedata><tw-passagedata pid="3" name="Ignore and walk straight past him" tags="" position="1500,600" size="100,100">{
 	(live: 2s)[
     	(stop:)
         &quot;&#39;&#39;&#39;Avada Kedavra!!!!&#39;&#39;&#39;&#39;&quot;
+        
+        (align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X=&quot;)[(link: &#39;&lt;img src=&quot;https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQp95wp0qbgYAGK27eou6PnZes4CXD6t3g_PLKYyszye7c-UhusiQco586jvwaBETKnprs&amp;usqp=CAU&quot;&gt;&#39;)[(goto:&quot;Tower&quot;)]]
 	]
 }
 
