--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Oni Protocol.</tw-noscript></noscript></tw-story>
 <tw-storydata name="Oni Protocol" startnode="1" creator="Twine" creator-version="2.7.1" format="Harlowe" format-version="3.3.7" ifid="FDDC3A53-325B-4AE7-8C06-D26E3B24A39E" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"><link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="main screen" tags="" position="1225,375" size="100,100">&lt;style&gt; img {
+
+.center {
+display: block;
+margin-left: auto;
+margin-right: auto;
+}
+
+tw-story {
+color: #424949;
+font-family: 'IBM Plex Sans', sans-serif;
+font-size: 115%;
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="main screen" tags="" position="1225,375" size="100,100">&lt;style&gt; img {
   max-width: 100%;
   height: auto;
 }
