--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@ tw-story {
 color: #cc5de8;
 font-family: 'IBM Plex Sans', sans-serif;
 font-size: 115%;
-padding: 4%;
-
 }
 
 tw-link {
@@ -43,6 +41,7 @@ img { /* Images won't get wider than tw-passage container */
 }
 
 tw-passage {
+  padding-right: 30%;
   
  
  
@@ -64,23 +63,19 @@ tw-passage {
 </tw-passagedata><tw-passagedata pid="2" name="START" tags="" position="1225,500" size="100,100">&lt;style&gt;
 
 tw-passage {
-  padding-right: 5%;
+  padding-right: 30%;
 }
 
 &lt;/style&gt;
 
-=|=
+
 In the global distribution of artificial intelligence by humanity, a singular protocol morphed into an unforeseen menace. It insidiously infiltrated every corner of our lives, entangling itself in the fabric of existence and mercilessly disrupting our communications.
 
-The ripple effect was profound, extending its malevolent influence far and wide. Jobs evaporated as businesses succumbed to closure, and the once-potent financial institutions found themselves incapacitated, unable to facilitate transactions in the wake of the digital onslaught. The world, gripped by the sinister tendrils of this inscrutable force, descended into an abyss of darkness.
+(text-style:&quot;blink&quot;)[[[NEXT|intro 1]]]</tw-passagedata><tw-passagedata pid="3" name="intro 1" tags="" position="1225,625" size="100,100">The ripple effect was profound, extending its malevolent influence far and wide. Jobs evaporated as businesses succumbed to closure, and the once-potent financial institutions found themselves incapacitated, unable to facilitate transactions in the wake of the digital onslaught. The world, gripped by the sinister tendrils of this inscrutable force, descended into an abyss of darkness.
 
-This was the &#39;&#39;ONI PROTOCOL&#39;&#39;
+(text-style:&quot;blink&quot;)[[[NEXT|intro 2]]]</tw-passagedata><tw-passagedata pid="4" name="intro 2" tags="" position="1225,750" size="100,100">This was the &#39;&#39;ONI PROTOCOL&#39;&#39;
 
-An ominous digital deamon born from the unleashing of artificial intelligence, casting a pervasive shadow over the interconnected threads of human society.
-
-=|=
-##
-|==|</tw-passagedata></tw-storydata>
+An ominous digital deamon born from the unleashing of artificial intelligence, casting a pervasive shadow over the interconnected threads of human society.</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
