--- a/index.html
+++ b/index.html
@@ -75,7 +75,19 @@ In the global distribution of artificial intelligence by humanity, a singular pr
 
 (text-style:&quot;blink&quot;)[[[NEXT|intro 2]]]</tw-passagedata><tw-passagedata pid="4" name="intro 2" tags="" position="1225,750" size="100,100">This was the &#39;&#39;ONI PROTOCOL&#39;&#39;
 
-An ominous digital deamon born from the unleashing of artificial intelligence, casting a pervasive shadow over the interconnected threads of human society.</tw-passagedata></tw-storydata>
+An ominous digital deamon born from the unleashing of artificial intelligence, casting a pervasive shadow over the interconnected threads of human society.
+
+(text-style:&quot;blink&quot;)[[[NEXT|intro 3]]]</tw-passagedata><tw-passagedata pid="5" name="intro 3" tags="" position="1225,875" size="100,100">&lt;style&gt; img {
+  max-width: 100%;
+  height: auto;
+}
+&lt;/style&gt;
+
+
+(transition:&quot;fade&quot;) + (transition-delay:1s) + (transition-time: 6s)+(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)[=&lt;img src=&quot;https://raw.githubusercontent.com/mariocannon/website/main/images/oniasccii.png&quot;&gt;
+
+&lt;br&gt;
+</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
