--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Oni Protocol.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Oni Protocol" startnode="1" creator="Twine" creator-version="2.7.1" format="Harlowe" format-version="3.3.7" ifid="FDDC3A53-325B-4AE7-8C06-D26E3B24A39E" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"><link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<tw-storydata name="Oni Protocol" startnode="6" creator="Twine" creator-version="2.7.1" format="Harlowe" format-version="3.3.7" ifid="FDDC3A53-325B-4AE7-8C06-D26E3B24A39E" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"><link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 .center {
 display: block;
@@ -52,10 +52,9 @@ img { /* Images won't get wider than tw-passage container */
 }
 &lt;/style&gt;
 
+&lt;img src=&quot;https://raw.githubusercontent.com/mariocannon/website/main/images/onilogo2.png&quot;\&gt;
 
-(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)[=&lt;img src=&quot;https://raw.githubusercontent.com/mariocannon/website/main/images/onilogo2.png&quot;&gt;
 
-&lt;br&gt;
 
 (text-colour:#cc5de8)[&#39;&#39;(text-style:&quot;bold&quot;,&quot;expand&quot;,&quot;fade-in-out&quot;)[=
 [[START]]&#39;&#39;]
@@ -70,9 +69,26 @@ tw-passage {
 
 In the global distribution of artificial intelligence by humanity, a singular protocol morphed into an unforeseen menace. It insidiously infiltrated every corner of our lives, entangling itself in the fabric of existence and mercilessly disrupting our communications.
 
-(text-style:&quot;blink&quot;)[[[NEXT|intro 1]]]</tw-passagedata><tw-passagedata pid="3" name="intro 1" tags="" position="1225,625" size="100,100">The ripple effect was profound, extending its malevolent influence far and wide. Jobs evaporated as businesses succumbed to closure, and the once-potent financial institutions found themselves incapacitated, unable to facilitate transactions in the wake of the digital onslaught. The world, gripped by the sinister tendrils of this inscrutable force, descended into an abyss of darkness.
+(text-style:&quot;blink&quot;)[[[NEXT|intro 1]]]</tw-passagedata><tw-passagedata pid="3" name="intro 1" tags="" position="1225,625" size="100,100">&lt;style&gt;
 
-(text-style:&quot;blink&quot;)[[[NEXT|intro 2]]]</tw-passagedata><tw-passagedata pid="4" name="intro 2" tags="" position="1225,750" size="100,100">This was the &#39;&#39;ONI PROTOCOL&#39;&#39;
+tw-passage {
+  padding-right: 30%;
+}
+
+&lt;/style&gt;
+
+The ripple effect was profound, extending its malevolent influence far and wide. Jobs evaporated as businesses succumbed to closure, and the once-potent financial institutions found themselves incapacitated, unable to facilitate transactions in the wake of the digital onslaught. The world, gripped by the sinister tendrils of this inscrutable force, descended into an abyss of darkness.
+
+(text-style:&quot;blink&quot;)[[[NEXT|intro 2]]]</tw-passagedata><tw-passagedata pid="4" name="intro 2" tags="" position="1225,750" size="100,100">&lt;style&gt;
+
+tw-passage {
+  padding-right: 30%;
+}
+
+&lt;/style&gt;
+
+
+This was the &#39;&#39;ONI PROTOCOL&#39;&#39;
 
 An ominous digital deamon born from the unleashing of artificial intelligence, casting a pervasive shadow over the interconnected threads of human society.
 
@@ -81,9 +97,63 @@ An ominous digital deamon born from the unleashing of artificial intelligence, c
   height: auto;
 }
 &lt;/style&gt;
+</tw-passagedata><tw-passagedata pid="6" name="main screen" tags="" position="1225,375" size="100,100">&lt;style&gt; img {
+  max-width: 100%;
+  height: auto;
+}
+&lt;/style&gt;
 
 
-(transition:&quot;fade&quot;) + (transition-delay:1s) + (transition-time: 6s)+(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)[=&lt;img src=&quot;https://raw.githubusercontent.com/mariocannon/website/main/images/oniasccii.png&quot;&gt;
+(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)[=&lt;img src=&quot;https://raw.githubusercontent.com/mariocannon/website/main/images/onilogo2.png&quot;&gt;
+
+&lt;br&gt;
+
+(text-colour:#cc5de8)[&#39;&#39;(text-style:&quot;bold&quot;,&quot;expand&quot;,&quot;fade-in-out&quot;)[=
+[[START]]&#39;&#39;]
+</tw-passagedata><tw-passagedata pid="7" name="START" tags="" position="1225,500" size="100,100">&lt;style&gt;
+img {
+  max-width: 80%;
+  height: auto;
+  
+tw-passage {
+  padding 10%;
+}
+
+&lt;/style&gt;
+
+[=&lt;img src=&quot;https://raw.githubusercontent.com/mariocannon/website/main/images/oni%20city.png&quot;&gt;
+In the global distribution of artificial intelligence by humanity, a singular protocol morphed into an unforeseen menace. It insidiously infiltrated every corner of our lives, entangling itself in the fabric of existence and mercilessly disrupting our communications.
+
+(text-style:&quot;blink&quot;)[[[NEXT|intro 1]]]</tw-passagedata><tw-passagedata pid="8" name="intro 1" tags="" position="1225,625" size="100,100">&lt;style&gt;
+
+tw-passage {
+  padding 10%;
+}
+
+&lt;/style&gt;
+
+The ripple effect was profound, extending its malevolent influence far and wide. Jobs evaporated as businesses succumbed to closure, and the once-potent financial institutions found themselves incapacitated, unable to facilitate transactions in the wake of the digital onslaught. The world, gripped by the sinister tendrils of this inscrutable force, descended into an abyss of darkness.
+
+(text-style:&quot;blink&quot;)[[[NEXT|intro 2]]]</tw-passagedata><tw-passagedata pid="9" name="intro 2" tags="" position="1225,750" size="100,100">&lt;style&gt;
+
+tw-passage {
+  padding 10%;
+}
+
+&lt;/style&gt;
+
+This was the &#39;&#39;ONI PROTOCOL&#39;&#39;
+
+An ominous digital deamon born from the unleashing of artificial intelligence, casting a pervasive shadow over the interconnected threads of human society.
+
+(text-style:&quot;blink&quot;)[[[NEXT|intro 3]]]</tw-passagedata><tw-passagedata pid="10" name="intro 3" tags="" position="1225,875" size="100,100">&lt;style&gt; img {
+  max-width: 100%;
+  height: auto;
+}
+&lt;/style&gt;
+
+
+(transition:&quot;fade&quot;) + (transition-delay:0.5s) + (transition-time: 3s)+(align:&quot;=&gt;&lt;=&quot;)+(box:&quot;X&quot;)[=&lt;img src=&quot;https://raw.githubusercontent.com/mariocannon/website/main/images/oniasccii.png&quot;&gt;
 
 &lt;br&gt;
 </tw-passagedata></tw-storydata>
