--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@ font-size: 115%;
 }
 
 tw-link {
-color: #1434A4;
+color: #cc5de8;
+border: 2px solid #cc5de8;
+border-radius: 5px;
+  padding: 5px;
 }
 tw-link:hover {
 color: #6F8FAF;
 text-decoration: none;
 border-bottom: 4px solid #6F8FAF;
+
 }
 
 tw-sidebar {
